<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F4F4F4"
    android:padding="16dp"
    tools:context=".EditCodeActivity">

    <!-- Логотип -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/clientspace_logo"/>

    <!-- Текст "Введите код доступа" -->
    <TextView
        android:id="@+id/textInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/create_access_code"
        android:textColor="#000000"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvErrorCode"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textInstruction"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:text="@string/incorrect_code"
        android:visibility="invisible"
        />

    <!-- Индикатор для кода -->
    <LinearLayout
        android:id="@+id/codeIndicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvErrorCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <!-- Индикаторы -->
        <View
            android:id="@+id/circle0"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_empty" />

        <View
            android:id="@+id/circle1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_empty" />

        <View
            android:id="@+id/circle2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_empty" />

        <View
            android:id="@+id/circle3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_empty" />

        <View
            android:id="@+id/circle4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_empty" />

        <View
            android:id="@+id/circle5"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_empty" />
    </LinearLayout>

    <!-- Кнопки для цифр -->
    <GridLayout
        android:id="@+id/keypadLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/codeIndicatorLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:columnCount="3">

        <!-- Кнопки с цифрами -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_1"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_2"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_3"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_4"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn5"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_5"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn6"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_6"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn7"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_7"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn8"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_8"
            android:textSize="18sp"
            android:layout_margin="8dp" />
        <Button
            android:id="@+id/btn9"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_9"
            android:textSize="18sp"
            android:layout_margin="8dp" />

        <!-- Кнопка "Удалить" -->
        <ImageView
            android:id="@+id/btnDelete"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/icon_delete"
            android:layout_margin="8dp" />

        <!-- Кнопка "0" -->
        <Button
            android:id="@+id/btn0"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/_0"
            android:textSize="18sp"
            android:layout_margin="8dp" />


    </GridLayout>
</RelativeLayout>

