<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_default_avatar" />

    <Button
        android:id="@+id/btnEditImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_change"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/color_blue_top"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="User Name"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/at_string"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text=""
        android:textColor="@color/black"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAccessCode"
        android:layout_marginTop="30dp"
        android:text="@string/str_access_code"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/layoutAccessCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="18dp">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_black"/>

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_black"/>

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_black"/>

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_black"/>

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_black"/>

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="4dp"
            android:background="@drawable/circle_black"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnEditCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_change"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/color_blue_top"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp" />

    <Button
        android:id="@+id/btnBackToMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_messages"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/color_blue_top"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp" />
</LinearLayout>
